Bug 1286126 - Move ServiceWorker initialization early in the ContentChild startup, r=gabor